# shardd

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.failover.yml  docker-compose.yml  run
.github/workflows/: cli-publish.yml  sdk-ci.yml  sdk-failover.yml  sdk-kotlin-publish.yml  sdk-python-publish.yml  sdk-rust-publish.yml  sdk-ts-publish.yml
apps/bench/: Cargo.toml
apps/bench/src/: main.rs
apps/billing/: Cargo.toml  Dockerfile
apps/billing/migrations/: 00001_billing.sql  00002_annual_pricing.sql  00003_notifications.sql
apps/billing/src/: lib.rs  main.rs
apps/billing/src/adapters/http/: app_state.rs  extractors.rs  mod.rs
apps/billing/src/adapters/http/routes/: admin.rs  billing.rs  mod.rs  webhooks.rs
apps/billing/src/adapters/persistence/: billing.rs  mod.rs
apps/billing/src/application/: app_error.rs  billing.rs  mod.rs
apps/billing/src/infra/: app.rs  config.rs  mod.rs  notifications.rs  setup.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/customer-cli/: Cargo.toml  README.md
apps/dashboard/: Cargo.toml  Dioxus.toml  Dockerfile
apps/dashboard-ui/: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  input.css  package-lock.json  package.json  tailwind.config.js
apps/dashboard-ui/assets/: tailwind.css
apps/dashboard-ui/src/: main.rs  router.rs  state.rs  types.rs
apps/dashboard-ui/src/api/: admin.rs  auth.rs  billing.rs  buckets.rs  developer.rs  events.rs  mod.rs
apps/dashboard-ui/src/components/: badge.rs  button.rs  command_palette.rs  copy_button.rs  edge_status.rs  empty_state.rs  event_card.rs  mesh_graph.rs  meta_row.rs  mod.rs  pagination.rs  stat_card.rs  time.rs
apps/dashboard-ui/src/pages/: account_detail.rs  admin_audit.rs  admin_events.rs  admin_mesh.rs  admin_overview.rs  admin_user.rs  admin_users.rs  billing.rs  bucket_detail.rs  buckets.rs  cli_authorize.rs  contact.rs  dashboard.rs  developer_events.rs  keys.rs  legal.rs  login.rs  mod.rs  not_found.rs  profile.rs  shell.rs
apps/dashboard/assets/: index.html  main.css
apps/dashboard/assets/assets/: shardd-dashboard-ui-dxh27dde48863dad9f.js  shardd-dashboard-ui-dxh3aafe5312023591.js  shardd-dashboard-ui-dxh3ce144b98d6085c3.js  shardd-dashboard-ui-dxh49a99f853d3bf6f3.js  shardd-dashboard-ui-dxhc5559dff27233ad.js  shardd-dashboard-ui_bg-dxh4e16a6b48ea7712d.wasm  shardd-dashboard-ui_bg-dxha7b17891bd513a8a.wasm  shardd-dashboard-ui_bg-dxhaa71f461c48ce040.wasm  shardd-dashboard-ui_bg-dxhc91be4276f112087.wasm  shardd-dashboard-ui_bg-dxhfe27ea318a9992.wasm  tailwind-dxh6655b527a9958f5a.css  tailwind-dxh8595a456fd22348.css
apps/dashboard/migrations/: 00001_create_users.sql  00006_collapse_developer_identity_into_users.sql  00007_developer_buckets.sql  00008_soft_delete.sql  00009_user_display_name.sql  00010_unique_active_key_names.sql
apps/dashboard/src/: api.rs  main.rs
apps/dashboard/src/adapters/http/: app_error_impl.rs  app_state.rs  extractors.rs  mod.rs  ui.rs
apps/dashboard/src/adapters/http/routes/: admin.rs  auth.rs  developer.rs  developer_auth.rs  developer_buckets.rs  machine.rs  mod.rs  user.rs
apps/dashboard/src/adapters/persistence/: buckets_registry.rs  developer_auth.rs  mod.rs  user.rs
apps/dashboard/src/application/: dashboard_session.rs  email_templates.rs  mod.rs
apps/dashboard/src/application/use_cases/: buckets_registry.rs  cli_auth.rs  developer_auth.rs  mod.rs  user.rs
apps/dashboard/src/components/: events.rs  header.rs  mod.rs  nodes.rs  overview.rs  sync_chart.rs
apps/dashboard/src/infra/: app.rs  cli_auth.rs  config.rs  mod.rs  setup.rs
apps/developer-cli/: Cargo.toml  LICENSE  README.md
apps/developer-cli/src/: http.rs  main.rs  output.rs
apps/developer-cli/src/cmd/: auth.rs  billing.rs  edges.rs  events.rs  health.rs  keys.rs
apps/gateway/: Cargo.toml  Dockerfile
apps/gateway/src/: main.rs
apps/landing/: Caddyfile  Dockerfile
apps/node/: Cargo.toml  Dockerfile
apps/node/src/: api.rs  app_state.rs  batch_writer.rs  bucket_allocator.rs  error.rs  lib.rs  main.rs  orphan_detector.rs  peer.rs  server.rs  service.rs  state.rs  sync.rs  test_overdraft.rs
apps/node/tests/: protocol_compliance.rs
bench/cross-region/: Dockerfile.node  README.md  docker-compose.yml  entrypoint.sh  run.sh
docs/: architecture.md  protocol.md  public-edge-clients.md  public-libp2p-clients.md
docs/examples/: .gitignore  public_edge_client.py  public_edge_client.ts
e2e/: README.md  dx-billing.mjs  dx-screenshot.mjs  emil-key.mjs  extra-screens.mjs  marketing-screenshots.mjs  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  prod-loop-screenshots.mjs
e2e/support/: dashboard-fixtures.ts  mock-server.mjs  prod-email.ts
e2e/tests/: mock-dashboard.spec.ts  mock-screenshots.spec.ts  prod-smoke.spec.ts
e2e/tools/: prod-screenshots.mjs
infra/: .env.example  README.md  compose.yml  deploy.sh  generate-compose.sh  infractl.py  scope_validation.py  setup_firewall.sh
infra/caddy/: Caddyfile
infra/scripts/: migrate_bucket_prefixes_to_users.py  probe_host.sh  reseed_credits.sh  setup_host.sh
infra/state/: cluster.example.json  (+1 more)
libs/broadcast/: Cargo.toml
libs/broadcast/src/: discovery.rs  gossip.rs  http.rs  lib.rs  libp2p.rs  memory.rs  mesh_client.rs  metadata.rs
libs/storage/: Cargo.toml
libs/storage/migrations/: 001_create_ledger_tables.sql  001_create_v2_schema.sql  002_add_balance_summary_view.sql  002_add_rolling_digests.sql  003_limit_event_note_length.sql  004_per_bucket_seq.sql  005_require_idempotency_nonce.sql
libs/storage/src/: lib.rs  memory.rs  postgres.rs
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: quickstart.py
sdks/python/src/shardd/: __init__.py  _core.py  async_client.py  client.py  errors.py  types.py
sdks/python/tests/: test_client.py  test_failover.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: quickstart.rs
sdks/rust/src/: client.rs  edges.rs  error.rs  lib.rs  types.rs
sdks/rust/tests/: failover.rs
src/: api.rs  main.rs  model.rs  peer.rs  state.rs  storage.rs  sync.rs
(+101 files in other folders)
