[workspace]
resolver = "2"
members = [
    "apps/node",
    "apps/cli",
    "apps/dashboard",
    "apps/bench",
    "libs/types",
    "libs/storage",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
shardd-types = { path = "libs/types" }
shardd-storage = { path = "libs/storage" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
sha2 = "0.10"

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Other
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
tempfile = "3"
futures = "0.3"
