[package]
name = "shardd-bench"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
