[package]
name = "shardd-bench"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
shardd-broadcast = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
