[package]
name = "shardd-billing"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"] }
dotenvy = "0.15"
tower = "0.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
secrecy = { version = "0.10", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1.89"
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
env_helpers = "0.1.0"
url = "2"
stripe = { package = "async-stripe", version = "0.41", features = ["runtime-tokio-hyper"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
