[package]
name = "shardd-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
shardd-broadcast = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
