[package]
name = "shardd-opctl"
version = "0.1.0"
edition.workspace = true
description = "Operator-only CLI for the shardd private libp2p mesh. Not for customers — see the published `shardd-cli` crate for the customer-facing tool."
publish = false

[dependencies]
shardd-types = { workspace = true }
shardd-broadcast = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
