[package]
name = "shardd-dashboard-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlDocument", "Document", "HtmlAnchorElement", "Element", "RequestCredentials", "Navigator", "Clipboard", "Blob", "BlobPropertyBag", "Url", "Location", "KeyboardEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
chrono = { version = "0.4", features = ["wasmbind", "clock"], default-features = false }
urlencoding = "2"
js-sys = "0.3"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "js"] }
