[package]
name = "shardd-dashboard"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
dioxus = { version = "0.7", features = ["web"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = "0.3"
