[package]
name = "shardd-cli"
version = "0.1.0"
edition.workspace = true
# Customer-facing CLI is MIT, matching the published SDK. The rest of
# the workspace is TQDM-SAL-1.0; this crate overrides the workspace
# default explicitly.
license = "MIT"
description = "Official command-line client for shardd — a globally distributed credit ledger with automatic regional failover."
readme = "README.md"
repository = "https://github.com/shardd-xyz/shardd"
homepage = "https://shardd.xyz"
documentation = "https://shardd.xyz/guide/introduction"
keywords = ["shardd", "ledger", "billing", "cli", "credits"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "shardd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = "5"
toml = "0.8"
webbrowser = "1"
rpassword = "7"
gethostname = "0.5"
