[package]
name = "shardd-gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
shardd-broadcast = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
hex = "0.4"

[dev-dependencies]
tower = "0.5"
