[package]
name = "shardd-node"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
shardd-storage = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
