[package]
name = "shardd-node"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
shardd-storage = { workspace = true }
shardd-broadcast = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
