[package]
name = "shardd-broadcast"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
libp2p = { version = "0.56", features = [
    "tokio", "tcp", "dns", "noise", "yamux",
    "gossipsub", "request-response", "kad", "identify", "ping", "pnet", "macros",
    "json",
] }
futures = "0.3"
sha2 = { workspace = true }
