[package]
name = "shardd-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
shardd-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
